# cai

./: README.md  SmartNegotiator.py  agent.py  agent2.py  bogdan_agent.py  group_69_negotiator.py  prediction_negotiator.py  run_tournament.py  template_negotiation.py  tournament.py
.github/workflows/: doc.yml  pypi.yml  test.yml  test_jupyter_notebooks.yml  test_with_extras.yml
competition materials/Code_for_tutorials2025/: Tutorial_running_a_negotiation.py  Tutorial_visualization.py
competition materials/myagent/: README.md  myagent.py
docs/: makedocs.sh  mkdocs.yml
docs/docs/: index.md  install.md  reference.md
docs/figures/: multideal.pptx
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
negmas-negotiation-app/: README.md  pyproject.toml  requirements.txt
negmas-negotiation-app/src/negmas_negotiation_app/: __init__.py  main.py
negmas-negotiation-app/src/negmas_negotiation_app/agents/: __init__.py  agent_four.py  agent_one.py  agent_three.py  agent_two.py
negmas-negotiation-app/src/negmas_negotiation_app/domain/: issues.py  utility_functions.py
negmas-negotiation-app/src/negmas_negotiation_app/mechanisms/: negotiation_mechanism.py
negmas-negotiation-app/src/negmas_negotiation_app/scenarios/: default_scenario.py
negmas-negotiation-app/src/negmas_negotiation_app/types/: index.py
notebooks/tutorials/: Tutorial_run_a_negotiation.ipynb
scenarios/TargetQuantity/: center.csv  center.yml
scenarios/TargetQuantitySaved/: center.yml
scenarios/dinners/: center.csv  center.yml
scripts/: makegraphs.py
tests/: test_scenarios.py
(+209 files in other folders)
